--- a/assignment10/index.html
+++ b/assignment10/index.html
@@ -47,47 +47,52 @@
             <h2> Some examples of my work. </h2>
         </header>
         <!-- Image 1  ------------------------------------->
-        <section class="portfolio">
-          <figure class="portfolio-item" id="car"> 
+        <section class="portfolio" id="car">
+          <figure class="portfolio-item"> 
               <img src="images/elite-auto.jpg" alt="a red sports car on a black and white street">
               <figcaption> This project was focused on ads for a car detailing service. I focused the ad on the cars themselves, since they are what the business is about. </figcaption>
           </figure>
         </section>
          <!-- Image 2  ------------------------------------->
-         <section class="portfolio">
-          <figure class="portfolio-item" id="boxer"> 
+         <section class="portfolio"  id="boxer">
+          <figure class="portfolio-item"> 
               <img src="images/competitive-edge.png" alt="a female boxer fighting the air in black and white">
               <figcaption> For one of my classes, we were tasked with creating a series of ads for a fictional sporting goods store. I wanted to emphasize competition and the intensity that sports can have.</figcaption>
           </figure>
          </section>
          <!-- Image 3  ------------------------------------->
-         <section class="portfolio">
-          <figure class="portfolio-item" id="claus"> 
+         <section class="portfolio"  id="claus">
+          <figure class="portfolio-item"> 
               <img src="images/claus-cover.jpg" alt="woman with black hair wearing a red satin dress and a santa hat sitting in front of a red satin backdrop">
               <figcaption> The goal of this project was to create a magazine cover for a fictitious company that you created. It was near the holidays at the time, I decided to do a Christmas-themed cover. Instead of what you typically see for the holidays, I decided to do a high-fashion holiday. </figcaption>
           </figure>
          </section>
          <!-- Image 4  ------------------------------------->
-         <section class="portfolio">
-          <figure class="portfolio-item" id="hockney">
+         <section class="portfolio"  id="hockney">
+          <figure class="portfolio-item">
               <img src="images/hockney.jpg" alt="">
               <figcaption> This image was inspired by Hockney's composites. I took several pictures of a poster I saw of a man and compiled them together to recreate his face.</figcaption>
           </figure>
          </section>
          <!-- Image 5  ------------------------------------->
-         <section class="portfolio">
-          <figure class="portfolio-item" id="castile"> 
+         <section class="portfolio"  id="castile">
+          <figure class="portfolio-item"> 
               <img src="images/knights-castile.jpg" alt="a red-haired man hugging a brown-haired woman who is smiling at the camera, followed by a bar of soap">
               <figcaption> For this piece, I redesigned an old soap ad for the modern age. I included some elements that reference the original ad, such as the serif heading.</figcaption>
           </figure>
          </section>
          <!-- Image 6  ------------------------------------->
-         <section class="portfolio">
-          <figure class="portfolio-item" id="self-portrait"> 
+         <section class="portfolio" id="self-portrait">
+          <figure class="portfolio-item"> 
               <img src="images/self-portrait.JPG" alt="">
               <figcaption> One of my classes asked me to draw a self-portrait. After many different renditions, I created this dramatic black and white version of myself. </figcaption>
           </figure>
          </section>
+         <!-- ********************* Aside ************************************ -->
+         <aside class="more">
+         <h2 id="want-more"> Want to see more works from me? </h2>
+         <h3> Check out my Logo Design and Web Design tabs! </h3>
+         </aside>
         <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
           <h2>Let's Keep in Touch!</h2>
